--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.example.filmslight"
         minSdk 23
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -34,6 +34,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures{
+        dataBinding true
         viewBinding true
     }
     buildTypes.each {
@@ -59,11 +60,18 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
+    // Images
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // System UI Controller
     implementation "land.sungbin:systemuicontroller:1.0.0"
 
+    // Swipe Refresh layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
     // Test
-    testImplementation 'junit:junit:'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -86,4 +94,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Paging
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
 }
